APixel: init commit, added some experiments

--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.styl"
+              "src/styles.styl",
+              "../node_modules/normalize.css/normalize.css"
             ],
             "scripts": []
           },
@@ -94,7 +95,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.styl"
+              "src/styles.styl",
+              "../node_modules/normalize.css/normalize.css"
             ],
             "scripts": []
           }
