--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
             ],
             "styles": [
               "src/styles.styl",
-              "../node_modules/normalize.css/normalize.css"
+              "./node_modules/normalize.css/normalize.css"
             ],
             "scripts": []
           },
